micro-member-service/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-member-service
spec:
  replicas: 0
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: micro-member-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: micro-member-service
        version: v1.0
        app.kubernetes.io/name: micro-member-service
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - micro-member-service-stage
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: app
          image: 222222222222.dkr.ecr.ap-northeast-2.amazonaws.com/micro-member-service-prod
          resources:
            requests:
              cpu: "500m"
              memory: "768Mi"
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: /
              port: 8090
            initialDelaySeconds: 30
            periodSeconds: 5
