micro-member-service/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: micro-member-service
  labels:
    app.kubernetes.io/name: micro-member-service
spec:
  ports:
    - port: 8090
      name: http
      targetPort: 8090
      nodePort: 30032
  selector:
    app.kubernetes.io/name: micro-member-service
  type: NodePort
